CMAKE_MINIMUM_REQUIRED(VERSION 2.6 FATAL_ERROR)

PROJECT(LSHKIT)


#SET(CMAKE_CXX_FLAGS_DEBUG "-g")
#SET(CMAKE_CXX_FLAGS_RELEASE "-O3")
#SET(CMAKE_EXE_LINKER_FLAGS_DEBUG "-g -static")
#SET(CMAKE_EXE_LINKER_FLAGS_RELEASE "-static")
#SET(CMAKE_SHARED_LIBRARY_C_FLAGS "")
#SET(CMAKE_SHARED_LIBRARY_LINK_C_FLAGS "")

SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${LSHKIT_BINARY_DIR}/lib)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${LSHKIT_BINARY_DIR}/bin)
SET(CMAKE_DEBUG_POSTFIX _debug)
SET(CMAKE_VERBOSE_MAKEFILE ON)
SET(Boost_USE_STATIC_LIBS ON)
#SET(BUILD_SHARED_LIBS FALSE)
FIND_PACKAGE(Boost 1.35 REQUIRED COMPONENTS program_options filesystem system
    math_c99)
FIND_PACKAGE(GSL) 

INCLUDE_DIRECTORIES(${LSHKIT_SOURCE_DIR}/include ${GSL_INCLUDE_DIR}
    ${Boost_INCLUDE_DIR})
LINK_DIRECTORIES(${Boost_LIBRARY_DIRS})

ADD_SUBDIRECTORY("src")
ADD_SUBDIRECTORY("tools")

